Changelog for mysql-duplicate-key-checker:

   * Column printout was misaligned one space.
   * Refactored into a runnable module and added tests.
   * Redundant indexes were only detected if the shorter index was first.
   * Redundant foreign keys sometimes weren't detected.

2007-08-23: version 1.0.5

   * MySQL socket connection option didn't work.
   * Added --askpass option.

2007-06-22: version 1.0.4

   * Documentation.

2007-06-10: version 1.0.3

   * Added --defaults-file option.
   * Added standard --version command-line option.

2007-03-25: version 1.0.2

   * Rewrite the GetOpt::Long code and rely on DBD to read MySQL option files.
   * Error handling if there aren't permissions to run SHOW CREATE TABLE on a
     view.
   * Documentation copy/paste error.

2007-03-02: version 1.0.1

   * Fixed several small bugs with quoting
   * Fixed bugs with index types (FULLTEXT, HASH etc)
   * Add --allatonce option

2007-03-01: version 1.0.0

   * Initial release.